# cybros-experimental

./: .dockerignore  .gitignore  Cargo.toml  rust-toolchain.toml
demo_worker/: .dockerignore  Dockerfile  README.md  main.ts
misc/: pallet-weight-template.hbs
pallets/computable_workers/: Cargo.toml
pallets/computable_workers/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/device_ids/: Cargo.toml  README.md
pallets/device_ids/runtime-api/: Cargo.toml
pallets/device_ids/runtime-api/src/: lib.rs
pallets/device_ids/src/: benchmarking.rs  impl_nonfungibles.rs  lib.rs  macros.rs  mock.rs  nonfungibles_impl.rs  tests.rs  types.rs  weights.rs
pallets/device_ids/src/features/: approvals.rs  attributes.rs  buy_sell.rs  create_delete_collection.rs  create_delete_item.rs  metadata.rs  mod.rs  settings.rs  transfer.rs
pallets/offchain_computing_infra/: Cargo.toml
pallets/offchain_computing_infra/primitives/: Cargo.toml
pallets/offchain_computing_infra/src/: benchmarking.rs  lib.rs  mock.rs
pallets/offchain_computing_infra/src/features/: impl_management.rs  worker_lifecycle.rs
pallets/offchain_computing_pool/: Cargo.toml
pallets/offchain_computing_pool/primitives/: Cargo.toml
pallets/offchain_computing_pool/primitives/src/: lib.rs
pallets/offchain_computing_pool/src/: lib.rs  mock.rs
pallets/offchain_computing_pool/src/features/: job_lifecycle.rs  job_management.rs  job_policy_management.rs  pool_management.rs
pallets/template/: Cargo.toml
parachain/: Cargo.toml
parachain-zepplin/: Cargo.toml
parachain-zepplin/node/: Cargo.toml
parachain-zepplin/node/src/: cli.rs
parachain-zepplin/runtime/: Cargo.toml
parachain-zepplin/runtime/src/: apis.rs  lib.rs
parachain-zepplin/scripts/: generate-benchmarks.sh  zombienet.sh
parachain-zepplin/zombienet-config/: local_network.toml
parachain/node/: Cargo.toml
parachain/node/src/: service.rs
parachain/runtime/: Cargo.toml
parachain/runtime/src/: apis.rs  lib.rs
parachain/runtime/src/configs/: mod.rs
parachain/scripts/: toml-sort.sh  zombienet.sh
scripts/: deno.jsonc  generate_network_genesis_config.ts  generate_network_presets.ts  insert_nodes_keys.ts  nodes_keys.json.example
scripts/deno_lib/: substrate.ts
solochain/: .dockerignore  Dockerfile
solochain/node/: Cargo.toml
solochain/node/chain_specs/: test.json
solochain/node/res/: testnet.json
solochain/node/src/: benchmarking.rs  chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
solochain/runtime/: Cargo.toml
solochain/runtime/src/: benchmarks.rs  genesis_config_presets.rs  lib.rs
solochain/runtime/src/configs/: aura.rs  balances.rs  grandpa.rs  mod.rs  offchain_computing_infra.rs  offchain_computing_pool.rs  sudo.rs  system.rs  timestamp.rs  transaction_payment.rs
squid/: .env.example  commands.json  docker-compose.yml  package-lock.json  package.json  schema.graphql  squid.yaml  typegen.json
squid/db/migrations/: 1729702997819-Data.js  1733688110781-Data.js
squid/src/: config.ts  main.ts  processor.ts  utils.ts
squid/src/processor_helpers/: impls.ts  jobs.ts  pool_workers.ts  pools.ts  workers.ts
squid/src/types/: v100.ts
squid/src/types/offchain-computing-infra/: events.ts
squid/src/types/offchain-computing-pool/: events.ts
