[workspace]
members = [
	"pallets/template",
	"solochain/node",
	"solochain/runtime",
]
resolver = "2"

[workspace.package]
authors = ["Cybros Developers"]
homepage = "https://github.com/cybros-network/cybros-network"
repository = "https://github.com/cybros-network/cybros-network"
license = "AGPL-3.0-only"
edition = "2021"

[workspace.dependencies]
clap = "4.5.8"
futures = "0.3.30"
serde_json = "1.0.120"
jsonrpsee = "0.23.2"

scale-codec = { package = "parity-scale-codec", version = "3.6.12", default-features = true }
scale-info = { version = "2.11.3", default-features = true }

# Substrate client
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }

# Substrate primitives
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }

# Frames and pallets
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }

# RPC related
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }

# Rntime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }

# Build related
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }

# Local dependencies
solochain-template-runtime = { path = "solochain/runtime", default-features = true }
pallet-template = { path = "pallets/template", default-features = true }

[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
correctness = { level = "warn", priority = 1 }
complexity = { level = "warn", priority = 1 }
large_enum_variant = { level = "allow", priority = 2 }
too_many_arguments = { level = "allow", priority = 2 }
if-same-then-else = { level = "allow", priority = 2 }
zero-prefixed-literal = { level = "allow", priority = 2 }            # 00_1000_000
type_complexity = { level = "allow", priority = 2 }                  # raison d'etre
nonminimal-bool = { level = "allow", priority = 2 }                  # maybe
borrowed-box = { level = "allow", priority = 2 }                     # Reasonable to fix this one
too-many-arguments = { level = "allow", priority = 2 }               # (Turning this on would lead to)
needless-lifetimes = { level = "allow", priority = 2 }               # generated code
unnecessary_cast = { level = "allow", priority = 2 }                 # Types may change
identity-op = { level = "allow", priority = 2 }                      # One case where we do 0 +
useless_conversion = { level = "allow", priority = 2 }               # Types may change
unit_arg = { level = "allow", priority = 2 }                         # stylistic
option-map-unit-fn = { level = "allow", priority = 2 }               # stylistic
bind_instead_of_map = { level = "allow", priority = 2 }              # stylistic
erasing_op = { level = "allow", priority = 2 }                       # E.g. 0 * DOLLARS
eq_op = { level = "allow", priority = 2 }                            # In tests we test equality.
while_immutable_condition = { level = "allow", priority = 2 }        # false positives
needless_option_as_deref = { level = "allow", priority = 2 }         # false positives
derivable_impls = { level = "allow", priority = 2 }                  # false positives
stable_sort_primitive = { level = "allow", priority = 2 }            # prefer stable sort
extra-unused-type-parameters = { level = "allow", priority = 2 }     # stylistic
default_constructed_unit_structs = { level = "allow", priority = 2 } # stylistic

[profile.release]
opt-level = 3
panic = "unwind"

# make sure dev builds with backtrace do not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1 # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
# flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
polkavm-linker = { opt-level = 3 }
primitive-types = { opt-level = 3 }
# reed-solomon-novelpoly = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
substrate-bip39 = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
# wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }
