[package]
name = "pallet-computable_workers"
description = "FRAME pallet template for defining custom runtime logic."
version = "0.0.1-dev"
readme = "README.md"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

# primitive deps
sp-runtime = { workspace = true, default-features = false }

# frame deps
frame-benchmarking = { workspace = true, optional = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }

pallet-device_ids = { workspace = true, default-features = false }

[dev-dependencies]
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }

pallet-balances = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-device_ids/std",
]
runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-device_ids/runtime-benchmarks",
]
try-runtime = [
	"sp-runtime/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-device_ids/try-runtime",
]
