[package]
name = "pallet-offchain_computing-infra"
version = "0.0.1-dev"
description = "Substrate pallet for managing lifecycle of decentralized offchain computing workers."
readme = "README.md"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition = "2021"
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true, default-features = false }
chrono = { workspace = true, default-features = false }
hex-literal = { workspace = true }

scale-codec = { workspace = true, default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }

primitives = { package = "pallet-offchain_computing-infra-primitives", path = "./primitives", default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }

[features]
default = ["std"]
std = [
	"log/std",
	"chrono/std",
	"scale-codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
